# yscloud

./: .gitignore  Cargo.nix  Cargo.toml  README.md  build.nix  ci.nix  crate-hashes.json  default.nix
acme-ssl/: Cargo.toml
acme-ssl/src/: lib.rs
appliance/: default.nix  platform-image.nix  qemu-vm.nix  sample.nix
appliance/init/: Cargo.toml
appliance/init/src/: main.rs
appliance/netman/: Cargo.toml
appliance/netman/dhcp/: Cargo.toml
appliance/netman/dhcp/src/v4/: mod.rs
appliance/netman/src/: main.rs  radvd.rs  raw_radv.rs
appliance/netman/src/dhcpv4/: mod.rs
appliance/netman/src/ip/: mod.rs
appliance/netman/src/netlink/: address.rs  mod.rs
automation/: build-all.sh
binhelpers/: Cargo.toml
binhelpers/src/: lib.rs
blog/: Cargo.toml
blog/hyper-staticfile/src/: lib.rs  resolve.rs  response_builder.rs  service.rs
blog/hyper-staticfile/src/util/: file_response_builder.rs  open_with_metadata.rs
blog/hyper-staticfile/tests/: static.rs
blog/src/: main.rs  statics.rs  vfs.rs
boss/bencode/: Cargo.toml
boss/bencode/src/: lib.rs
boss/magnetite-common/: Cargo.toml
boss/magnetite-common/src/: bytes_cow.rs  lib.rs  proto.rs  torrent.rs  torrent_id.rs
boss/vfs/: Cargo.toml
boss/vfs/src/: lib.rs
boss/vfshost/: Cargo.toml  torrent_vfs.sql
boss/vfshost/src/: main.rs
boss/webserver/: Cargo.toml
boss/webserver/src/: arc.rs  main.rs
dialer/src/: http.rs  lib.rs
experiments/esockets/: Cargo.toml
experiments/esockets/src/: lib.rs
experiments/linkerclient/: Cargo.toml
experiments/linkerclient/src/: lib.rs
experiments/sdf-dns/: Cargo.toml
experiments/sdf-dns/src/: main.rs
experiments/sni-director/: Cargo.toml
experiments/sni-director/src/: config.rs  main.rs  mgmt_proto.rs  sni.rs
experiments/sni-multiplexor/: .gitignore  Cargo.toml  active-formatter.py  build.rs  session-reaper.py
experiments/sni-multiplexor/src/: abortable_stream.rs  config.rs  context.rs  dialer.rs  erased.rs  ioutil.rs  main.rs  mgmt_proto.rs  resolver.rs  resolver2.rs  sni.rs  sni2.rs  sni_base.rs  state_track.rs
experiments/sni-multiplexor/src/error/: tls.rs
experiments/sni-multiplexor/src/helpers/: haproxy_proxy_header_version.rs  mod.rs
experiments/sni-multiplexor/src/model/: config.rs  mod.rs
experiments/socket-traits/: Cargo.toml
experiments/socket-traits/src/: dynamic.rs  lib.rs
experiments/sockets/: Cargo.toml
experiments/sockets/src/: lib.rs
infra/cloudsafe/: Cargo.toml
infra/cloudsafe/src/: ip.rs
infra/memfd/: Cargo.toml
infra/memfd/src/: lib.rs
infra/owned_fd/: Cargo.toml
infra/owned_fd/src/: lib.rs
infra/tokio-sendfd/: Cargo.toml
ksuid/: Cargo.toml
ksuid/src/: base62.rs  lib.rs
linker/: .gitignore  Cargo.toml
linker/manifests/: sfshost.json  staticserver.json
linker/src/: __demo.rs  artifact.rs  bind.rs  main.rs
linker/src/cmdlet/: artifact_metastamp.rs  common.rs  create_release.rs  daemon.rs  mod.rs  publish_artifact.rs  run.rs  start_daemon.rs  unstable_setup_container.rs
linker/src/daemon/: artifact_loader.rs  mod.rs
linker/src/platform/: common.rs  linux.rs  macos.rs  mod.rs  posix.rs
linker/src/platform/linux/: container.rs  mod.rs  mount.rs  seccomp.rs  unshare.rs
linker/src/platform/linux/arch/: archgen.sh  mod.rs  syscalls.txt  x86_64.rs
linker/src/publish_artifact/: mod.rs
linker/src/registry/: mod.rs
linker/src/start_daemon/: mod.rs
linker/src/util/: mod.rs
nixlib/: make-squashfs.nix
parsing/tls/: Cargo.toml
parsing/tls/src/: lib.rs
pb/: default.nix
pb/certificate_issuer/: certificate_issuer.proto
pb/nix/: builder.sh  pb.nix
pb/pb-builder/: Cargo.toml
pb/pb-builder/src/: main.rs
publish-release/: Cargo.toml  Cargo_test.toml
publish-release/src/: main.rs
registry-model/: Cargo.toml
registry-model/src/: lib.rs  permissions.rs
tonic/linker-connector/: Cargo.toml
tonic/linker-connector/src/: lib.rs
webserver/: Cargo.toml
webserver/hello-world/: Cargo.toml  build.rs
webserver/hello-world/src/: main.rs
webserver/src/: lib.rs
webserver/templates/: directory_listing.html  errorpage.html
yscloud-config-model/: Cargo.toml
yscloud-config-model/src/: lib.rs  permissions.rs
