[workspace]
members = [
	"boss/bencode",
	"boss/magnetite-common",
	"boss/vfshost",
	"boss/webserver",
	"experiments/esockets",
	"experiments/linkerclient",
	"experiments/sni-multiplexor",
	"experiments/socket-traits",
	"experiments/sockets",
	"infra/cloudsafe",
	"infra/memfd",
	"infra/owned_fd",
	"ksuid",
	"ksuid/cli",
	"linker",
	"parsing/tls",
	"webserver",
	"yscloud-config-model",
]
