[workspace]
members = [
	"boss/bencode",
	"boss/magnetite-common",
	"boss/vfshost",
	"boss/webserver",
	"experiments/esockets",
	"experiments/linkerclient",
	"experiments/sni-multiplexor",
	"experiments/socket-traits",
	"experiments/sockets",
	"experiments/sdf-dns",
	"infra/cloudsafe",
	"infra/memfd",
	"infra/owned_fd",
	"ksuid",
	"ksuid/cli",
	"linker",
	"parsing/tls",
	"webserver",
	"webserver/hello-world",
	"yscloud-config-model",
	"tonic/linker-connector",
]
