[workspace]
members = [
	# "boss/bencode",
	# "boss/magnetite-common",
	# "boss/vfshost",
	# "boss/webserver",
	"appliance/init",
	"appliance/netman",
	"appliance/netman/dhcp",
	"binhelpers",
	"experiments/linkerclient",
	"experiments/sni-multiplexor",
	"experiments/socket-traits",
	"experiments/sockets",
	# "experiments/sdf-dns",
	"infra/cloudsafe",
	"infra/memfd",
	"infra/owned_fd",
	"ksuid",
	"ksuid/cli",
	"linker",
	"parsing/tls",
	"pb/pb-builder",
	"webserver",
	"webserver/hello-world",
	"yscloud-config-model",
	"tonic/linker-connector",
]
