[package]
name = "yscloud-linker"
version = "0.1.6"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

[dependencies]
# internal
sockets = { path = "../experiments/sockets" }
yscloud-config-model = { path = "../yscloud-config-model" }
memfd = { path = "../infra/memfd" }
owned_fd = { path = "../infra/owned_fd" }

# external 
clap = "2.32"
env_logger = "0.6"
log = "0.4"
nix = "0.14"
rand = "*"
semver = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.1"
tempfile = "3.1"
users = "0.9.1"
uuid = { version = "0.6", features = ["v4", "serde"] }
futures-preview = "=0.3.0-alpha.19"
failure = "0.1.5"
reqwest = "0.9.20"
tokio = "=0.2.0-alpha.6"
sha2 = "0.8.0"
sha3 = "0.8.2"
digest = "0.8.0"
tracing = "0.1.9"
tracing-subscriber = "0.1.5"
