[package]
name = "yscloud-linker"
version = "0.1.7"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

[dependencies]
# internal
sockets = { path = "../experiments/sockets" }
yscloud-config-model = { path = "../yscloud-config-model" }
memfd = { path = "../infra/memfd" }
owned_fd = { path = "../infra/owned_fd" }

# external 
clap = { version = "2.32", default-features = false }
digest = "0.9.0"
failure = "0.1.8"
futures = "0.3.5"
nix = "0.19"
rand = "0.7"
reqwest = { version = "0.10.4", features = ["default-tls", "stream"] }
semver = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.2"
sha3 = "0.9.1"
signal-hook = "0.1"
tempfile = "3.1"
tokio = { version = "=0.2.20", default-features = false, features = ["rt-core", "tcp", "uds", "time", "stream", "sync"] }
tracing = "0.1.23"
tracing-subscriber = "0.2.5"
users = "0.10.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
seccomp = "0.1"
libc = "^0.2"