[package]
name = "publish-release"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.6", features = ["v4", "serde"] }
sodiumoxide = "*"
yscloud-config-model = { path = "../yscloud-config-model" }
semver = { version = "0.9.0", features = ["serde"] }
toml = "0.4"
