[package]
name = "webserver"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
ksuid = { path = "../ksuid" }

# external
askama = "0.8"
uuid = { version = "0.8.1", features = ["v4", "serde"] }