[package]
name = "yscloud-config-model"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

[dependencies]
semver = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
