[package]
name = "appliance-init"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20.0"
anyhow = "1.0.40"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
