[package]
name = "appliance-netman"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

[dependencies]
nix = "0.20"
libc = "0.2.91"
byteorder = "1"
copy_arena = "0.1.1"
im = "15"
chrono = "0.4.19"
time = "0.2.26"
failure = "0.1.8"
anyhow = "1.0.40"
binhelpers = { path = "../../binhelpers" }

futures = "0.3.13"
env_logger = "0.8.3"
tokio = { version = "1", features = [ "full" ] }
netlink-proto = "0.6.0"
netlink-packet-core = "0.2.4"
netlink-packet-route = "0.7.0"
netlink-packet-audit = "0.2.1"
