[package]
name = "magnetite-common"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# external
byteorder = "1.0"
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
thiserror = "1.0"