[package]
name = "boss-vfs"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.5.4"
failure = "0.1.8"
