[package]
name = "boss-vfshost"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
magnetite-common = { path = "../magnetite-common" }
bencode = { path = "../bencode" }
boss-vfs = { path = "../vfs" }

# external
clap = { version = "2.33.1", default-features = false }
failure = "0.1.8"
futures = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.8"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5.4"