[package]
name = "esockets"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
mio = "0.6.21"
socket2 = "0.3.11"
tokio = "0.2"
bytes = "0.5"