[package]
name = "linkerclient"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yscloud-config-model = {path = "../../yscloud-config-model" }
sockets = { path = "../sockets" }
serde = { version = "1.0", features = ["derive"] }
nix = "0.13"