[package]
name = "sni-multiplexor"
version = "0.1.14"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

[dependencies]
# internal
ksuid = { path = "../../ksuid" }
tls = { path = "../../parsing/tls" }
yscloud-config-model = { path = "../../yscloud-config-model" }
socket-traits = { path = "../socket-traits" }

# external
bytes = "0.4.12"
clap = "*"
copy_arena = "0.1"
env_logger = "0.6.1"
failure = "0.1.5"
futures-preview = { version = "=0.3.0-alpha.19" }
log = "0.4"
nix = "0.13"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=0.2.0-alpha.6" }
tokio-net = { version = "=0.2.0-alpha.6" }
uuid = { version = "0.6", features = ["v4", "serde", "const_fn"] }
smallvec = "0.6.10"