[package]
name = "sni-multiplexor"
version = "0.1.19"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

[dependencies]
# internal
ksuid = { path = "../../ksuid" }
tls = { path = "../../parsing/tls" }
yscloud-config-model = { path = "../../yscloud-config-model" }
socket-traits = { path = "../socket-traits" }

# external
bytes = "0.5.3"
clap = { version = "2.32", default-features = false }
copy_arena = "0.1"
failure = "0.1.5"
futures = "0.3"
histogram = "0.6"
nix = "0.13"
ppp = "1.2.0"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "0.6.10"
tokio = { version = "=0.2.20", default-features = false, features = ["rt-core", "tcp", "uds", "time", "stream", "sync"] }
tracing = "0.1.9"
tracing-subscriber = "0.1.5"
trust-dns-resolver = "0.12.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }