[package]
name = "sockets"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.13"
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat"] }