[package]
name = "webserver-hello-world"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
linker-connector = { path = "../../tonic/linker-connector" }
hyper = "0.13"
clap = { version = "2.33.1", default-features = false }
tracing = "0.1.9"
tracing-subscriber = "0.1.5"

# [build-dependencies]
# tonic-build = "0.3"